Fix crash when deleting connection.

BUG: 308293
FIXED-IN: 0.9.0.6